adding bootstrap for layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
             <meta charset="utf-8" />
 	</head>
  	<body>
-	
+	   <div class="container">
+	     <div class="jumbotron">
+	        	<h1 class="text-center">Coin Change</h1>
+		        <h4 class="text-center"><em>Aaron Goldsmith</em></h4>
+	     </div>
+	  </div>
 	</body>
 
 
