adding more bootstrap for user to select coins

--- a/index.html
+++ b/index.html
@@ -13,13 +13,34 @@
             <meta charset="utf-8" />
 	</head>
  	<body>
-	   <div class="container">
-	     <div class="jumbotron">
-	        	<h1 class="text-center">Coin Change</h1>
-		        <h4 class="text-center"><em>Aaron Goldsmith</em></h4>
+	     <div class="jumbotron jumbotron-fluid">
+	        	<h1 class="display-4 text-center">Coin Change</h1>
+		        <h4 class="display-6 text-center">Aaron Goldsmith</h4>
 	     </div>
-	  </div>
+	
+	<div class="container">
+		<div class="row">
+		    <div class="col-sm-8 p-5 text-light bg-dark">
+			<h3 class="display-4 mb-5">Select Coin Denominations</h3>
+			<div class="form-check form-check-inline">
+  				<input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+ 				<label class="form-check-label" for="inlineCheckbox1">1</label>
+			</div>
+		   	<div class="form-check form-check-inline">
+  				<input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+  				<label class="form-check-label" for="inlineCheckbox2">2</label>
+			</div>
+			<div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                                <label class="form-check-label" for="inlineCheckbox3">3</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+                                <label class="form-check-label" for="inlineCheckbox4">4</label>
+                        </div>  
+		    <a class="float-right btn btn-primary" href="#" role="button">Press Me</a>
+		</div>
+		</div>
+        </div>
 	</body>
-
-
 </html>
